--- a/package.json
+++ b/package.json
@@ -22,33 +22,35 @@
     "lint": "eslint --fix src/**/*.js"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "date-fns": "^1.27.2",
-    "dom-helpers": "^3.2.1",
-    "prop-types": "^15.5.7",
-    "react-tiny-virtual-list": "^2.0.0",
-    "react-transition-group": "^1.1.3",
-    "recompose": "^0.22.0"
+    "classnames": "^2.3.1",
+    "date-fns": "^1.30.1",
+    "dom-helpers": "^5.2.1",
+    "prop-types": "^15.7.2",
+    "react-tiny-virtual-list": "^2.2.0",
+    "react-transition-group": "^4.4.2",
+    "recompose": "^0.30.0"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0-alpha"
+    "react": "^16.8.0 || ^17.0.2",
+    "react-dom": "^16.8.0 || ^17.0.2"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
-    "@kadira/storybook-addon-options": "^1.0.1",
-    "babel-eslint": "^7.0.0",
-    "babel-plugin-css-modules-transform": "^1.2.1",
-    "eslint": "^3.8.1",
-    "eslint-config-react-app": "^0.5.1",
-    "eslint-plugin-flowtype": "^2.21.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
-    "node-sass": "^4.5.0",
-    "nwb": "^0.15.6",
-    "nwb-sass": "^0.7.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "@kadira/storybook-addon-options": "^1.0.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "eslint": "^8.4.1",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "node-sass": "^7.0.0",
+    "nwb": "^0.25.2",
+    "nwb-sass": "^0.10.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "webpack": "^4.43.0"
   },
   "author": {
     "name": "Clauderic Demers",
