--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "node-sass": "^7.0.0",
     "nwb": "^0.25.2",
     "nwb-sass": "^0.10.2",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^4.43.0"
