--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-infinite-calendar",
-  "version": "2.3.1",
+  "name": "react-infinite-calendar-customized",
+  "version": "1.0.0",
   "description": "Infinite scrolling date-picker built with React, with localization, themes, keyboard support, and more.",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -54,19 +54,11 @@
     "react-dom": "^17.0.2",
     "webpack": "^4.43.0"
   },
-  "author": {
-    "name": "Clauderic Demers",
-    "email": "me@ced.io"
-  },
-  "user": "clauderic",
-  "homepage": "https://github.com/clauderic/react-infinite-calendar",
+  "homepage": "https://github.com/diwakarsingh95/react-infinite-calendar",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/clauderic/react-infinite-calendar.git"
-  },
-  "bugs": {
-    "url": "https://github.com/clauderic/react-infinite-calendar/issues"
+    "url": "https://github.com/diwakarsingh95/react-infinite-calendar.git"
   },
   "keywords": [
     "react",
