--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "build": "npm run clean && nwb build-react-component --no-vendor",
     "clean": "nwb clean-module && nwb clean-demo",
     "start": "nwb serve-react-demo",
-    "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
@@ -35,23 +34,21 @@
     "react-dom": "^16.8.0 || ^17.0.2"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.35.3",
-    "@kadira/storybook-addon-options": "^1.0.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "node-sass": "^7.0.0",
     "nwb": "^0.25.2",
-    "nwb-sass": "^0.10.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.45.1",
     "webpack": "^4.43.0"
   },
   "homepage": "https://github.com/diwakarsingh95/react-infinite-calendar",
