--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
-    "lint": "eslint --fix src/**/*.js"
+    "lint": "eslint --fix src/**/*.js",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "classnames": "^2.3.1",
